--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1693,6 +1693,9 @@ hr {
   .blind {
     display: none;
   }
+  .tabs .t_content .tabulate .hd {
+    width: 100%;
+  }
   .tabs .t_content .tabulate .wrap_head .hd .tt_head {
     width: 50%;
   }
@@ -1700,7 +1703,7 @@ hr {
     width: 40%;
   }
   .tabs .t_content .tabulate .wrap_list .gd .dls {
-    width: 38%;
+    width: 30%;
   }
   .tabs .t_content .tabulate .wrap_list .gd .tt_list {
     width: 80%;
