--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1268,7 +1268,7 @@ nav {
       background-color: $white;
       line-height: 22px;
       width: 100%;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       color: rgba(51, 51, 51, 0.8);
       // margin-right: 5px;
       border-radius: 5px;
@@ -1291,13 +1291,77 @@ nav {
       order: 1;
       width: 100%;
       display: none;
+      form {
+        .w_bk {
+          background-color: $white;
+          padding: 20px;
+          margin-bottom: 50px;
+          border-radius: 5px;
+          p {
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 19px;
+            letter-spacing: 0.03em;
+            color: rgba(51, 51, 51, 0.9);
+            margin-bottom: 20px;
+          }
+          label {
+            font-family: Nunito;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 800;
+            line-height: 22px;
+            letter-spacing: 0.02em;
+            text-align: left;
+            margin-top: 20px;
+            input {
+              background-color: $gray;
+            }
+          }
+
+          .resend {
+            font-family: Nunito;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 19px;
+            letter-spacing: 0.03em;
+            text-align: left;
+            margin-top: 20px;
+            cursor: pointer;
+            img {
+              width: 16px;
+              margin-right: 5px;
+              height: 16px;
+              transition: 1.5s ease;
+              object-fit: cover;
+            }
+          }
+        }
+
+        button {
+          border: 0;
+          background-color: $pk;
+          color: $white;
+          max-width: 280px;
+          text-decoration: none;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 22px;
+          letter-spacing: 0em;
+        }
+      }
     }
   }
 }
 hr {
   border: 1px solid rgba(51, 51, 51, 0.6);
 }
-
+.tabs .c_verify .v_content form .w_bk .resend img.trans {
+  transform: rotate(360deg);
+}
 .desktop {
   &::before {
     content: url("../../images/Deskstop.svg");
