--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1095,6 +1095,23 @@ nav .hamburger {
      object-fit: cover;
 }
 
+.green {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  color: rgba(75, 225, 51, 0.7);
+}
+
+.ups_down {
+  display: none;
+}
+
+.red {
+  letter-spacing: 0.02em;
+  color: rgba(255, 23, 23, 0.6);
+}
+
 .tabs {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1384,9 +1401,72 @@ nav .hamburger {
 }
 
 .tabs .t_content .syntax {
+  overflow-x: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 150px;
+}
+
+.tabs .t_content .syntax .tracks {
   background-color: #fff;
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+  padding: 20px;
+  margin-bottom: 15px;
   border-radius: 5px;
-  max-width: 800px;
+  width: 280px;
+  margin-right: 16px;
+}
+
+.tabs .t_content .syntax .tracks h3 {
+  font-family: Nunito;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.tabs .t_content .syntax .tracks figure {
+  font-family: Nunito;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 41px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.tabs .t_content .syntax .tracks .freq {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tabs .t_content .syntax .tracks .freq img {
+  width: 30px;
+  height: 30px;
+  background-color: #f4f4f4;
+  border-radius: 50%;
+  margin-right: 10px;
+  padding: 5px;
+}
+
+.tabs .t_content .syntax .tracks .freq p {
+  margin: 0;
+  font-family: Nunito;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  margin-top: 7px;
 }
 
 .tabs .rec {
@@ -1740,11 +1820,10 @@ nav .hamburger {
 
 .tabs .from_to {
   position: absolute;
-  right: 20px;
+  right: 0px;
   top: 215px;
   max-width: 414px;
   width: 100%;
-  background-color: #fff;
   border-radius: 5px;
   padding: 20px;
 }
@@ -1961,6 +2040,10 @@ hr {
 }
 
 @media (min-width: 768px) {
+  .tabs .from_to {
+    top: 66px;
+    right: 20px;
+  }
   nav {
     display: -webkit-box;
     display: -ms-flexbox;
