--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -824,7 +824,21 @@ nav {
     }
   }
 }
+.green {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.04em;
 
+  color: rgba(75, 225, 51, 0.7);
+}
+.ups_down {
+  display: none;
+}
+.red {
+  letter-spacing: 0.02em;
+  color: rgba(255, 23, 23, 0.6);
+}
 // SETTINGS
 .tabs {
   display: flex;
@@ -1063,10 +1077,64 @@ nav {
     }
 
     .syntax {
-      background-color: $white;
-      border-radius: 5px;
-      max-width: 800px;
+      overflow-x: scroll;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      margin-top: 150px;
+
       .tracks {
+        background-color: $white;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+        padding: 20px;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        width: 280px;
+        margin-right: 16px;
+        h3 {
+          font-family: Nunito;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 22px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+        figure {
+          font-family: Nunito;
+          font-size: 30px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 41px;
+          letter-spacing: 0.02em;
+          text-align: left;
+          margin-bottom: 15px;
+        }
+        .freq {
+          display: flex;
+
+          img {
+            width: 30px;
+            height: 30px;
+            background-color: $gray;
+            border-radius: 50%;
+            margin-right: 10px;
+            padding: 5px;
+          }
+          p {
+            margin: 0;
+            font-family: Nunito;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 19px;
+            letter-spacing: 0.02em;
+            text-align: left;
+            margin-top: 7px;
+          }
+        }
       }
     }
   }
@@ -1366,11 +1434,11 @@ nav {
   }
   .from_to {
     position: absolute;
-    right: 20px;
+    right: 0px;
     top: 215px;
     max-width: 414px;
     width: 100%;
-    background-color: $white;
+    // background-color: $white;
     border-radius: 5px;
     padding: 20px;
     h2 {
@@ -1579,6 +1647,10 @@ hr {
 }
 
 @media (min-width: 768px) {
+  .tabs .from_to {
+    top: 66px;
+    right: 20px;
+  }
   nav {
     @include flex-box(space-between, 10%);
     flex-direction: column;
