--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1137,6 +1137,48 @@ nav {
         }
       }
     }
+
+    .t_result {
+      background-color: $white;
+      border-radius: 5px;
+      padding: 15px 25px 50px 25px;
+      margin-top: 30px;
+      margin-bottom: 25px;
+      p {
+        margin-bottom: 10px;
+      }
+      .age {
+        margin-top: 50px;
+        .count_wrap {
+          .counts {
+            display: flex;
+            h5 {
+              font-family: Nunito;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: 19px;
+              letter-spacing: 0.02em;
+              text-align: left;
+              margin-right: 10px;
+              margin-bottom: 15px;
+            }
+            .l_wrap {
+              width: 247px;
+              height: 8px;
+              background: #f4f4f4;
+              border-radius: 4px;
+              margin-top: 5px;
+              .wrap {
+                background-color: $pk;
+                border-radius: 4px;
+                height: 8px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
   .rec {
     margin-top: 48px;
