--- a/assets/css/sogasstyle.css
+++ b/assets/css/sogasstyle.css
@@ -22,6 +22,9 @@ main .wrapper .mainnav img {
   height: 45px;
   align-self: center;
 }
+main .wrapper .mainnav .hamburger{
+  display: none;
+}
 main .wrapper .mainnav .navlinks {
   display: flex;
   justify-content: space-between;
@@ -205,4 +208,144 @@ footer .lastfooter .social {
 footer .lastfooter .social img {
   width: 20px;
   margin-left: 20px;
+}
+/* ooooooooooooooooooooooooooo
+
+Tablet Screens 
+
+ooooooooooooooooooooooooooooooooo*/
+@media screen and (max-width: 768px){
+
+  /* for about us, location, time and date */
+  main .wrapper .alltexts{
+    margin-right: 50px;
+  
+
+  }
+  main .wrapper .alltexts h1{
+    font-size: 17px;
+    margin-right: 
+    100px;
+  }
+  main .wrapper .alltexts .meta{
+    margin-right: 350px;
+    font-size: 14px;
+  }
+  main .wrapper .alltexts .meta .Tickets p{
+    text-align: right;
+  }
+  main .wrapper .alltexts .text h2{
+    font-weight: 400px;
+    font-size: 16px;
+  }
+
+  /* Form field section */
+
+  main .wrapper .mainform .inputs_wrapper .inputs input{
+    width: 230px;
+    height: 38px;
+  }
+  main .wrapper .mainform{
+    padding: 10px 70px;
+  }
+  main .wrapper .mainform .buttondiv .submit{
+    width: 310px;
+    height: 40px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  footer .footertop{
+    margin-right:200px;
+    font-size: 13px;
+  }
+  footer .TextLogo{
+    line-height: 13px;;
+    margin-right: 20px;
+    font-size: 12px;
+  }
+  footer .company{
+    margin-left: 20px;
+  }
+}
+
+/* ooooooooooooooooooooooooooo
+
+Mobile Screens 
+
+ooooooooooooooooooooooooooooooooo*/
+@media screen and (max-width: 600px) {
+
+  /* showing hamburger menu for smaller screens */
+
+  main .wrapper .mainnav .hamburger{
+    display: block;
+  }
+  main .wrapper .mainnav .navlinks{
+    display:none;
+  }
+  /* for about us, location, time and date */
+
+  main .wrapper .alltexts{
+    margin-right: 20px;
+  }
+  main .wrapper .alltexts h1{
+    margin-right: 30px;
+    font-size: 16px;
+  }
+  main .wrapper .alltexts .meta{
+    margin-right: 10px;
+  }
+
+  /* Form field section */
+  
+  main .wrapper .mainform{
+    display: block;
+    padding: 10px 20px;
+    
+  }
+  main .wrapper .mainform .inputs_wrapper .inputs{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main .wrapper .mainform .inputs_wrapper .inputs input{
+    width: 60vw;
+  }
+  main .wrapper .mainform .radio{
+    margin-left: 30px;
+  }
+  main .wrapper .mainform .buttondiv .submit{
+    width: 60vw;
+  }
+  footer{
+    padding-bottom: 20px;
+  }
+  footer .footertop{
+    display: block;
+    width: 100vw;
+  }
+  footer .company{
+    margin-left: 0px;
+    margin-top: 50px;
+  }
+  footer .lastfooter{
+    display: block;
+  }
+  footer .demacation{
+    position: relative;
+    top: -100px;
+  }
+  footer .social{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    
+  }
+  footer .copyright{
+    position: relative;
+    top: 50px;
+    text-align: 
+    center;
+  }
 }
