--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1164,7 +1164,7 @@ nav {
               margin-bottom: 15px;
             }
             .l_wrap {
-              width: 247px;
+              width: 240px;
               height: 8px;
               background: #f4f4f4;
               border-radius: 4px;
@@ -1180,6 +1180,7 @@ nav {
       }
     }
   }
+
   .rec {
     margin-top: 48px;
     h2 {
@@ -1561,7 +1562,75 @@ hr {
     top: 5px;
   }
 }
+
+.content_table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  // max-width: 1099px;
+  width: 100%;
+  // border: 1px solid red;
+  thead {
+    tr {
+      background: #ffffff;
+      text-align: left;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+      border-radius: 5px 5px 0px 0px;
+      font-weight: bold;
+      select {
+        background-color: transparent;
+        font-family: Nunito;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 22px;
+        letter-spacing: 0em;
+        text-align: right;
+        border: none;
+      }
+    }
+  }
+  tbody {
+    tr {
+      background-color: #eeeeee;
+      border-bottom: 1px solid #dddd;
+      // &:nth-child(even) {
+      //   background-color: $gray;
+      // }
+    }
+  }
+  th,
+  td {
+    padding: 12px 15px;
+    font-family: Nunito;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 19px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    p {
+      text-align: center;
+
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 19px;
+      letter-spacing: 0.02em;
+      span {
+        text-align: center;
+      }
+    }
+  }
+}
+
 // MAX WIDTH STARTs FROM HERE
+@media (min-width: 820px) {
+  .tabs .t_content .t_result {
+    width: 40%;
+  }
+}
 @media (max-width: 820px) {
   .blind {
     display: none;
@@ -1581,6 +1650,16 @@ hr {
   .tabs .t_content .tabulate .wrap_list .gd .tt_list {
     width: 80%;
   }
+  .mute {
+    display: flex;
+    // max-width: 1000px;
+    // justify-content: center;
+    overflow-x: scroll;
+  }
+  .content_table th,
+  .content_table td {
+    min-width: 150px;
+  }
 }
 @media (max-width: 767px) {
   nav {
@@ -1597,6 +1676,10 @@ hr {
   }
   .avatar_bell {
     display: none;
+  }
+  .content_table th,
+  .content_table td {
+    min-width: 230px;
   }
   nav ul {
     display: flex;
