--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1553,6 +1553,67 @@ hr {
 .grim {
   background-color: #d8d8d8;
 }
+.details_table {
+  margin-top: 50px;
+  h2 {
+    margin-bottom: 15px;
+  }
+}
+.calendar {
+  max-width: 414px;
+  width: 100%;
+  background-color: $white;
+  border-radius: 5px;
+  padding: 20px;
+  h2 {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  .date_data {
+    display: flex;
+    justify-content: space-between;
+    font-family: Nunito;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    text-align: left;
+
+    span {
+      font-family: Nunito;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+      text-align: left;
+    }
+    img {
+      height: 25px;
+      width: 25px;
+      object-fit: cover;
+    }
+    input {
+      width: auto;
+      margin: 0;
+      padding: 0;
+      // margin-left: 10px;
+      font-family: Nunito;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 19px;
+      letter-spacing: 0.02em;
+      text-align: left;
+    }
+  }
+}
 .phone {
   &::before {
     content: url("../../images/phone.svg");
@@ -1619,6 +1680,7 @@ hr {
     line-height: 19px;
     letter-spacing: 0.02em;
     text-align: left;
+
     p {
       text-align: center;
 
@@ -1634,6 +1696,69 @@ hr {
   }
 }
 
+.active_page {
+  border-bottom: 4px solid $pk;
+  width: 30px;
+  font-weight: 800;
+}
+
+.pagination_case {
+  margin: 50px auto;
+  .f_pagination {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin: 0 auto;
+
+    li {
+      margin-top: 10px;
+      font-family: Nunito;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0.018em;
+      cursor: pointer;
+      text-align: center;
+    }
+    .f_arrows {
+      display: flex;
+      justify-content: space-between;
+      margin: 0;
+      // width: 30%;
+      p {
+        background-color: $white;
+        border-radius: 5px;
+        padding: 10px 17px;
+        font-family: Nunito;
+        font-size: 14px;
+        font-style: normal;
+        margin: 0;
+        font-weight: 600;
+        line-height: 19px;
+        height: 40px;
+        cursor: pointer;
+        letter-spacing: 0.018em;
+        text-align: center;
+      }
+      .cage {
+        cursor: pointer;
+        background-color: $pk;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+
+        img {
+          width: 20px;
+          height: 20px;
+        }
+      }
+    }
+  }
+}
 // MAX WIDTH STARTs FROM HERE
 @media (min-width: 820px) {
   .tabs .t_content .t_result {
@@ -1660,7 +1785,7 @@ hr {
     width: 80%;
   }
   .mute {
-    display: flex;
+    // display: flex;
     // max-width: 1000px;
     // justify-content: center;
     overflow-x: scroll;
@@ -1673,6 +1798,9 @@ hr {
 @media (max-width: 767px) {
   nav {
     padding: 25px 20px;
+  }
+  .pagination_case .f_pagination {
+    width: 70%;
   }
   .main_container {
     margin-top: 130px;
@@ -1689,6 +1817,12 @@ hr {
   .content_table th,
   .content_table td {
     min-width: 230px;
+    &:first-child {
+      min-width: 90px;
+    }
+    &:last-child {
+      min-width: 300px;
+    }
   }
   nav ul {
     display: flex;
@@ -1784,6 +1918,14 @@ hr {
   .tabs .from_to {
     top: 66px;
     right: 20px;
+  }
+  #mt {
+    margin-top: 100px;
+  }
+  .details_table {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
   }
   nav {
     @include flex-box(space-between, 10%);
