--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1237,7 +1237,7 @@ nav {
         content: url("../../images/password_key.svg");
         margin-right: 15px;
         position: absolute;
-        left: 25px;
+        left: 0px;
       }
     }
     button {
@@ -1317,7 +1317,7 @@ nav {
       }
     }
     .swit {
-      width: 13%;
+      // width: 13%;
       input {
         height: 0;
         width: 0;
@@ -2250,6 +2250,66 @@ hr {
   }
 }
 
+.log {
+  position: relative;
+
+  .change_password {
+    background-color: $white;
+    border-radius: 5px;
+    position: absolute;
+    display: none;
+    padding: 20px 30px;
+    top: 0;
+    z-index: 2;
+    .sub_ {
+      display: flex;
+      justify-content: space-between;
+      span {
+        width: 165px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Nunito;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 22px;
+        letter-spacing: 0em;
+        // text-align: left;
+        text-decoration: underline;
+
+        cursor: pointer;
+      }
+      button {
+        margin: 0;
+        width: 165px;
+        height: 50px;
+        background-color: $pk;
+        color: $white;
+        cursor: pointer;
+      }
+    }
+
+    label {
+      font-family: Nunito;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 22px;
+      letter-spacing: 0em;
+      text-align: left;
+      input {
+        background-color: $gray;
+        margin-bottom: 30px;
+        border: 1px solid rgba(51, 51, 51, 0.3);
+      }
+    }
+  }
+}
+.change_password.active {
+  display: block;
+}
 @media (min-width: 560px) {
   .uu_wrap {
     display: flex;
