--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -431,12 +431,12 @@ nav {
               background: $gray;
               height: 100px;
               display: block;
-              width: 100px;
+              width: 25%;
               margin-right: 70px;
               border-radius: 5px;
               margin-top: 25px;
               input {
-                width: 100px;
+                width: 25%;
                 cursor: pointer;
                 height: 100px;
                 opacity: 0;
@@ -446,13 +446,12 @@ nav {
                 height: 36px;
                 position: absolute;
                 top: 29px;
-
-                left: 34px;
+                left: 50px;
                 margin: 0;
               }
             }
             img {
-              width: 170px;
+              width: 50%;
               height: 120px;
               border-radius: 5px;
               object-fit: cover;
@@ -625,7 +624,9 @@ nav {
     }
   }
 }
-
+.active {
+  display: block;
+}
 // EVENTS DETAILS
 .detail_wrap {
   .back-img {
@@ -930,9 +931,19 @@ nav {
         z-index: 2;
         padding: 20px 30px;
         width: 100%;
+        display: none;
+        position: relative;
         border-radius: 5px;
         .users_list {
           margin-top: 50px;
+          .close_overlay {
+            position: absolute;
+            right: 30px;
+            width: 30px;
+            height: 30px;
+            top: 20px;
+            cursor: pointer;
+          }
           .p_list {
             display: flex;
             justify-content: space-between;
@@ -1642,6 +1653,9 @@ nav {
     }
   }
 }
+.edit_users.abled {
+  display: block;
+}
 hr {
   border: 1px solid rgba(51, 51, 51, 0.6);
 }
@@ -2028,6 +2042,11 @@ hr {
     top: 66px;
     right: 20px;
   }
+  .tabs .t_content .add_user .edit_users {
+    width: 55%;
+    position: absolute;
+    right: 0;
+  }
   .change_password {
     width: 50%;
     right: 30px;
@@ -2346,6 +2365,7 @@ hr {
   .ment {
     display: flex;
     justify-content: space-between;
+    width: 75%;
   }
   .tabs .t_content form .ment label {
     width: 47%;
@@ -2360,6 +2380,9 @@ hr {
     .main_card {
       width: 48.5%;
     }
+  }
+  .overlay .backdrop .wrap form .upload .file {
+    width: 75%;
   }
 }
 
